--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p class="w3-large w3-center">Senna is a wraith who can manipulate the Black Mist and fight with a relic cannon.</p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
-    Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
+    Powered by Bruno Batista.
   </div>
 </div>
 
